--- a/public/assets/css/sb-admin-2.css
+++ b/public/assets/css/sb-admin-2.css
@@ -9900,8 +9900,8 @@ a:focus {
 }
 
 .bg-gradient-primary {
-  background-color: #4e73df;
-  background-image: linear-gradient(180deg, #4e73df 10%, #224abe 100%);
+  background-color: #e84118;
+  background-image: linear-gradient(180deg, #e84118 10%, #e84118 100%);
   background-size: cover;
 }
 
@@ -10321,7 +10321,7 @@ a:focus {
 
 .sidebar {
   width: 6.5rem;
-  min-height: 100vh;
+  min-height: 141%;
 }
 
 .sidebar .nav-item {
