09-02-2021  - alert changes - nithish

--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,7 @@ input::-webkit-inner-spin-button {
 input[type=number] {
   -moz-appearance: textfield !important;
 }
+
+.cashflow-heading{
+  color: #e84118 !important;
+}
