--- a/src/styles.css
+++ b/src/styles.css
@@ -1,16 +1,13 @@
 body {font-family: Arial, Helvetica, sans-serif;}
 * {box-sizing: border-box;}
-
   .form-inline {  
     display: flex;
     flex-flow: row wrap;
     align-items: center;
   }
-
   .form-inline label {
     margin: 5px 10px 5px 0;
   }
-
   .form-inline input {
     vertical-align: middle;
     margin: 5px 10px 5px 0;
@@ -19,23 +16,17 @@ body {font-family: Arial, Helvetica, sans-serif;}
     border: 1px solid #ddd;
   }
   .pro-sidebar{
-    min-width:200px;
-    width: 230px;
-    height:100vh;
+    height:200vh;
   }
-
   .pro-sidebar .pro-menu.shaped .pro-menu-item > .pro-inner-item > .pro-icon-wrapper{
     background-color: #e84118;
   }
-
   .pro-sidebar .pro-menu > ul > .pro-sub-menu > .pro-inner-list-item{
     background-color: #fff;
   }
-
   .pro-sidebar.collapsed .pro-menu > ul > .pro-menu-item.pro-sub-menu > .pro-inner-list-item > .popper-inner{
     background-color: #fff;
   }
-
   .form-inline Form.Select {
     vertical-align: middle;
     margin: 5px 10px 5px 0;
@@ -43,31 +34,32 @@ body {font-family: Arial, Helvetica, sans-serif;}
     background-color: #fff;
     border: 1px solid #ddd;
   }
-  
-  .pro-sidebar .pro-menu .pro-menu-item.active a{
+  .pro-sidebar .pro-menu .pro-menu-item.active {
     border-radius: 0.35rem;
-    color: #4e73df !important;
     font-weight: 700;
-    display: block;    
-    padding: 0.5rem 1rem;
+    display: block;        
     text-decoration: none;
     white-space: nowrap;
     background-color: #dfdfdf;
   }
-
-  .pro-sidebar .pro-menu a:hover{
-    border-radius: 0.35rem;    
-    font-weight: 700;
-    display: block;    
-    padding: 0.5rem 1rem;
-    text-decoration: none;
-    white-space: nowrap;
-    background-color: #dfdfdf;
+  .pro-sidebar .pro-menu .pro-menu-item.active a{
+  color: #4e73df !important;
+  }
+  .pro-sidebar .pro-menu .pro-menu-item.pro-sub-menu .pro-inner-list-item .pro-inner-item:hover{
+    background-color: #4e72df1a;
+    border-radius: 0.35rem;        
   }
   .button-section {
     margin: 3%;
   }
-
+  .pro-sidebar .pro-menu .pro-menu-item.pro-sub-menu .pro-inner-list-item{
+    padding: 0 0.5rem;
+    margin: 0 1rem;    
+    border-radius: 0.85rem;
+  }
+  .pro-sidebar .pro-menu a{
+    font-size: 0.85rem;
+  }
   .button-sec {
     margin-top:3%;
   }
@@ -78,15 +70,12 @@ body {font-family: Arial, Helvetica, sans-serif;}
     color: white;
     cursor: pointer;
   }
-
   .button:hover {
     background-color: royalblue;
   }
-
   .remove {
     background-color: rgb(192, 53, 53);
   }
-
   .remove:hover {
     background-color: rgb(187, 43, 43);
   }
